stock-sell-signal/docker-and-k8s/application/inference-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-sell-inference-service
  labels:
    app: stock-sell-inference
spec:
  selector:
    app: stock-sell-inference
  type: ClusterIP
  ports:
  - name: http
    port: 8000 # This is the port other containers inside the container used to communicate with this service
    targetPort: 8000
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
